# rules_foreign_cc

./: .bazelignore  .bazelrc  .bazelrc.common  .bazelrc.deleted_packages  .gitignore  .pre-commit-config.yaml  .yamlfmt.yml  .yamllint.yml  BUILD  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  NEWS.md  README.md  SET_FILE_PREFIX_MAP_MIGRATION.md  USAGE_EXAMPLES.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  cmake.html  configure_make.html  examples_repositories.bzl  index.html  index.md  install_ws_dependency.bzl  make.html  meson.html  msbuild.html  nghttp2.patch  ninja.html  print.html  repositories.bzl  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  verify_implementation.py  version.bzl  (+1 more)
docs/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  bazel_skylib-diff_test.patch  cmake.md  common_header.vm  configure_make.md  docs.bzl  flatten.md  gen_header.sh  index.md  make.md  ninja.md  providers.md  rules.md  stardoc_deps.bzl  stardoc_repository.bzl  test_docs.sh
docs/root/: book.toml
docs/src/: SUMMARY.md  bzlmod.md  examples.md  index.md  migration.md  output_groups.md  rules.md
docs/tools/: workspace_status.sh
examples/: .bazelignore  .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  cc_wrapper.sh  examples_repositories.bzl  print_bazel_version.sh  requirements.txt  requirements_lock.txt  select_windows_tests.bzl
examples/apache_httpd/: BUILD  t.sh
examples/apache_thrift/: BUILD
examples/bison/: BUILD
examples/boost/: BUILD
examples/build_cmake_itself/: BUILD
examples/build_ffmpeg_with_prefix_script/: BUILD.ffmpeg  BUILD.x264  README.md  WORKSPACE
examples/build_make_itself/: BUILD
examples/built_ninja/: BUILD  test_ninja_version.sh
examples/cc_configure_make/: BUILD  libevent_echosrv1.c
examples/cmake/: BUILD  libpng_test.cpp  test_libgd.sh  test_libpng.sh  test_zlib.sh
examples/cmake_android/: BUILD  BUILD.bazel  hello_lib-example.cpp  zlib-example.cpp
examples/cmake_cares/: BUILD  c-ares-test.cpp
examples/cmake_crosstool/: .bazelrc  BUILD  BUILD.bazel  WORKSPACE  WORKSPACE.bazel
examples/cmake_defines/: BUILD  BUILD.bazel
examples/cmake_generate_in_place/: BUILD.bazel
examples/cmake_hello_world_lib/: BUILD  test_hello.sh
examples/cmake_hello_world_variant/: BUILD  BUILD.bazel  test_hello_world.sh
examples/cmake_nghttp2/: BUILD
examples/cmake_output_groups/: BUILD.bazel  CMakeLists.txt  README.md  README.txt
examples/cmake_pcl/: BUILD
examples/cmake_synthetic/: BUILD  BUILD.bazel  test_libb.cpp
examples/cmake_synthetic_in_subdir/: BUILD.bazel  test_libb.cpp
examples/cmake_with_bazel_transitive/: BUILD  BUILD.bazel  test_libb.cpp
examples/cmake_with_data/: BUILD  BUILD.bazel
examples/cmake_with_target/: BUILD.bazel
examples/cmake_working_dir/: BUILD  BUILD.bazel  test_liba.cpp
examples/configure_gnuplot/: BUILD  arc.c
examples/configure_libunwind/: BUILD
examples/configure_modify_input_source/: BUILD.bazel  testSimple.c
examples/configure_mpc/: BUILD  mpc_test.c
examples/configure_use_malloc/: BUILD  BUILD.bazel  WORKSPACE  hello.cpp
examples/configure_with_bazel_transitive/: BUILD  BUILD.bazel  builtWithBazel.c  builtWithBazel.h  testSimple.c
examples/current_toolchains/: BUILD.bazel
examples/docs/: BUILD  README.md  docs.bzl
examples/gnuplot/: BUILD  example.txt  gnuplot_example.cpp  libgd_resize.c  libpng_minimal.c  libpng_test.cpp
examples/integration_tests/: README.md
examples/make_luajit/: BUILD  README.md  WORKSPACE
examples/make_simple/: BUILD  BUILD.bazel  README.md  test_libb.cpp
examples/meson_simple/: BUILD.bazel
examples/meson_with_requirements/: BUILD.bazel  hello_expected.txt
examples/msbuild_simple/: BUILD.bazel  test_mylib.cpp
examples/ninja/: BUILD  test_ninja_version.sh
examples/ninja_simple/: BUILD.bazel  README.md  test_libb.cpp
examples/postgreql/: BUILD.bazel  WORKSPACE
examples/postgres/: BUILD  exec.sh
examples/pybind11/: BUILD  call_cpp_from_py.sh  test.py
examples/rust/: BUILD.bazel  cargo-bazel-lock.json
examples/simple_make/: BUILD  README.md  test_libb.cpp
examples/toolchains_examples/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  additional_toolchains.bzl  fancy_platform_commands.bzl  test_platform_name_rule.bzl
examples/use_malloc/: BUILD  README.md  WORKSPACE
examples/with_prebuilt_ninja_artefact/: BUILD  WORKSPACE
for_workspace/: BUILD  BUILD.bazel  bazel_version.bzl  cmake_build.bzl  compilation_mode.bzl  deprecation.bzl  install_ws_dependency.bzl  make_build.bzl  ninja_build.bzl  os_info.bzl  repositories.bzl  starlark_api_change_support.bzl  utils_osx.sh  utils_unix.sh  utils_win.sh
foreign_cc/: BUILD.bazel  boost_build.bzl  cmake.bzl  configure.bzl  defs.bzl  extensions.bzl  facade.bzl  foreign_cc.bzl  make.bzl  meson.bzl  msbuild.bzl  ninja.bzl  providers.bzl  repositories.bzl  runtime_executable.bzl  utils.bzl
foreign_cc/built_tools/: BUILD.bazel  cmake_build.bzl  make_build.bzl  meson_build.bzl  meson_tool_wrapper.py  ninja_build.bzl  pkgconfig_build.bzl
foreign_cc/private/: BUILD.bazel  cc_toolchain_util.bzl  (+25 more)
test/: BUILD  BUILD.bazel  assert_no_tool_runfiles_guessing.sh  assert_output_validation_script.sh  assert_staged_tool_launchers.sh  cmake_text_tests.bzl  convert_shell_script_test.bzl  env_test.bzl  facade_test_utils.bzl  make_env_vars_test.bzl  meson_text_tests.bzl  msbuild_text_tests.bzl  output_group_file_rule.bzl  runtime_executable_shell_quoting_test.sh  runtime_executable_test.bzl  runtime_library_search_directories_test.bzl  set_file_prefix_map_test.bzl  shell_script_helper_test_rule.bzl  symlink_contents_to_dir_test_rule.bzl  test_set_file_prefix_map.BUILD  test_set_file_prefix_map.sh  utils_test.bzl
toolchains/: BUILD  BUILD.bazel  built_toolchains.bzl  cmake-c++11.patch  cmake_versions.bzl  parallel_make.sh  prebuilt_toolchains.bzl  prebuilt_toolchains.py  prebuilt_toolchains_repository.bzl  preinstalled_toolchains.bzl  toolchains.bzl  version_resolution_test.bzl  workspace_legacy.bzl
(+659 files in other folders)
