load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [".shellcheckrc"],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "distribution",
    srcs = [
        ".bazelrc",
        ".bazelrc.common",
        ".bazelversion",
        "BUILD.bazel",
        "MODULE.bazel",
        "MODULE.bazel.lock",
        "WORKSPACE.bazel",
        "WORKSPACE.bzlmod",
        "version.bzl",
        "//foreign_cc:distribution",
        "//toolchains:distribution",
    ],
    visibility = ["//visibility:public"],
)
