"""bazel-contrib/rules_foreign_cc"""

module(
    name = "rules_foreign_cc",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.21.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Dev dependencies
bazel_dep(name = "gazelle", version = "0.41.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "bazel_ci_rules", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.2.2", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")

# Note: bazel mod tidy will keep this up to date
use_repo(
    tools,
    "cmake-3.31.8-linux-aarch64",
    "cmake-3.31.8-linux-x86_64",
    "cmake-3.31.8-macos-universal",
    "cmake-3.31.8-windows-i386",
    "cmake-3.31.8-windows-x86_64",
    "cmake_3.31.8_toolchains",
    "cmake_src",
    "gettext_runtime",
    "glib_dev",
    "glib_runtime",
    "glib_src",
    "gnumake_src",
    "meson_src",
    "ninja_1.13.0_linux",
    "ninja_1.13.0_linux-aarch64",
    "ninja_1.13.0_mac",
    "ninja_1.13.0_mac_aarch64",
    "ninja_1.13.0_toolchains",
    "ninja_1.13.0_win",
    "ninja_build_src",
    "pkgconfig_src",
    "rules_foreign_cc_framework_toolchain_freebsd",
    "rules_foreign_cc_framework_toolchain_linux",
    "rules_foreign_cc_framework_toolchain_macos",
    "rules_foreign_cc_framework_toolchain_windows",
    "rules_foreign_cc_framework_toolchains",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "@cmake_3.31.8_toolchains//:all",
    "@ninja_1.13.0_toolchains//:all",
    "@python_3_12//:all",
    "@rules_foreign_cc//toolchains:all",
)
