"""bazel-contrib/rules_foreign_cc"""

module(
    name = "rules_foreign_cc",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.28.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "bazel_lib", version = "3.2.0")

# Dev dependencies
bazel_dep(name = "gazelle", version = "0.41.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)

# Note: 1.13 requires nodeps bzlmod deps, which requires bazel 7.6.0
bazel_dep(name = "aspect_rules_lint", version = "1.12.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    tools,
    "cmake_3.31.8_toolchains",
    "cmake_src",
    "gettext_runtime",
    "glib_dev",
    "glib_src",
    "gnumake_src",
    "meson_src",
    "ninja_1.13.0_toolchains",
    "ninja_build_src",
    "pkgconfig_src",
    "rules_foreign_cc_framework_toolchains",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "@cmake_3.31.8_toolchains//:all",
    "@ninja_1.13.0_toolchains//:all",
    "@python_3_12//:all",
    "@rules_foreign_cc//toolchains:all",
)
