"""bazel-contrib/rules_foreign_cc"""

module(
    name = "rules_foreign_cc",
    version = "0.0.0",
)

bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_lib", version = "3.2.0")

# Dev dependencies
bazel_dep(name = "gazelle", version = "0.44.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

# Note: 1.13 requires nodeps bzlmod deps, which requires bazel 7.6.0
bazel_dep(name = "aspect_rules_lint", version = "1.12.0", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1", dev_dependency = True)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_.bazelversion",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    tools,
    "cmake_3.31.8_toolchains",
    "cmake_src",
    "gettext_runtime",
    "glib_dev",
    "glib_src",
    "gnumake_src",
    "meson_src",
    "ninja_1.13.0_toolchains",
    "ninja_build_src",
    "pkgconfig_src",
    "rules_foreign_cc_framework_toolchains",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "@cmake_3.31.8_toolchains//:all",
    "@ninja_1.13.0_toolchains//:all",
    "@python_3_12//:all",
    "@rules_foreign_cc//toolchains:all",
)
