load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

test_suite(
    name = "third_party_examples_linux_tests",
    target_compatible_with = ["@platforms//os:linux"],
    tests = ["@rules_foreign_cc_examples_third_party//:linux_tests"],
)

test_suite(
    name = "third_party_examples_linux_rbe_tests",
    tags = ["manual"],
    tests = ["@rules_foreign_cc_examples_third_party//:linux_rbe_tests"],
)

test_suite(
    name = "third_party_examples_macos_tests",
    target_compatible_with = ["@platforms//os:macos"],
    tests = ["@rules_foreign_cc_examples_third_party//:macos_tests"],
)

test_suite(
    name = "third_party_examples_windows_tests",
    target_compatible_with = ["@platforms//os:windows"],
    tests = ["@rules_foreign_cc_examples_third_party//:windows_tests"],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)
