load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

exports_files([
    "cc_wrapper.sh",
])

test_suite(
    name = "third_party_tests",
    tests = ["@rules_foreign_cc_examples_third_party//:all_tests"],
)

test_suite(
    name = "tool_staging_smoke_tests",
    tests = [
        "//meson_simple:test_introspect",
        "//meson_simple:test_lib_default",
        "//meson_simple:test_lib_tiny",
        "//meson_with_requirements:test_hello_prog_python",
        "//meson_with_requirements:test_hello_runpython",
    ],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)
