bazel_dep(name = "rules_foreign_cc")
local_path_override(
    module_name = "rules_foreign_cc",
    path = "..",
)

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
tools.cmake(version = "3.23.1")
tools.ninja(version = "1.11.1")
use_repo(
    tools,
    "meson_src",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_swift", version = "2.1.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "3.16.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "rules_java", version = "8.6.2")
bazel_dep(name = "rules_perl", version = "0.2.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    # Only set when you have mulitple toolchain versions.
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "rules_android", version = "0.6.0-alpha1.bcr.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.android.support.constraint:constraint-layout:aar:1.1.2",
        "com.android.support:appcompat-v7:aar:26.1.0",
    ],
    repositories = [
        "https://jcenter.bintray.com/",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "bazel_ci_rules", version = "1.0.0", dev_dependency = True)

rbe_preconfig = use_repo_rule(
    "@bazel_ci_rules//:rbe_repo.bzl",
    "rbe_preconfig",
)

rbe_preconfig(
    name = "buildkite_config",
    toolchain = "ubuntu2004",
)
